# aeqw

./: LICENSE  README  README.md  aeqw.conf  aeqw.in  aeqw.out  autoeqw.py  guide_autoeqw.docx  isynspec.py  isynspec202.py  isynspec205.py  lines.py  setup.cfg
examples/: aeqw.conf  aeqw.out
src/aeqw/: __init__.py  __main__.py
