[metadata]
name = aeqw
author = Sriram Krishna
author_email = ksri91@gmail.com
description = A script to automate estimation of Elemental abundances given equivalent linewidths of a stellar spectrum.
version = 3.0dev4
url = https://github.com/k-sriram/aeqw
keywords =
  astrophysics
  photosphere
classifiers =
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  License :: OSI Approved :: MIT License
  Topic :: Scientific/Engineering
license_files =
  LICENSE

[options]
python_requires = >= 3.6
packages = aeqw
zip_safe = True
package_dir = 
    =src


[options.entry_points]
console_scripts =
    aeqw=aeqw.__main__:main
